--- a/javascript/testPage.html
+++ b/javascript/testPage.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>test page</title>
+        <script src="Main.js"></script>
     </head>
     <body>
         <h1>this is a javaScript test page</h1>
