--- a/javascript/testPage.html
+++ b/javascript/testPage.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>test page</title>
-        <script src="Main.js"></script>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="Main.js"></script>
+    <link rel="stylesheet" href="testPageStyles.css">
+</head>
     <body>
-        <h1>this is a javaScript test page</h1>
+        <p>test</p>
     </body>
 </html>
