--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Test</title>
     <script src="Main.js"></script>
-    <link rel="stylesheet" href="testPageStyles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <style>
     </style>
   </head>
