--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Test</title>
-    <script src="Main.js"></script>
+    <script src="scripts/Main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <style>
     </style>
