--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Test</title>
-    <script src="assignments.js"></script>
-    <link rel="stylesheet" href="styles/style.css">
-    <style>
-    </style>
+    <script src="Main.js"></script>
+    <!--<link rel="stylesheet" href="styles/style.css"-->
   </head>
   <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
+    <button>Press me</button>
   </body>
 </html>
