--- a/php/index.html
+++ b/php/index.html
@@ -8,9 +8,9 @@
     
 </head>
 <body>
-    <form action="upload.php" method="POST" enctype="multipart/form-data">
-        <input type="file" name="file">
-        <button type="submit" name="submit">upload file</button>
-    </form>
+<form action="upload.php" method="post" enctype="multipart/form-data">
+  <input type="file" name="file">
+  <button type="submit">Upload</button>
+</form>
 </body>
 </html>
