--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Test</title>
-    <!--<script src="Main.js"></script>-->
+    <script src="assignments.js"></script>
     <!--<link rel="stylesheet" href="styles/style.css"-->
   </head>
   <body>
-    <input id="todoTitle" type="text">
-
-    <script>
+    <!--<script>
       let todoList = [
         {
           title: "Get groceries",
@@ -53,6 +51,6 @@
           list.appendChild(elememt);
         });
       }
-    </script>
+    </script>-->
   </body>
 </html>
