--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Test</title>
-    
+    <script src="assignments.js"></script>
     <link rel="stylesheet" href="pongstyle.css">
     <!--<link rel="stylesheet" href="styles/style.css"-->
   </head>
   <body>
-    <div style="text-align: center;">
-      <canvas id="pongGame" style="background-color: black;"></canvas>
-    </div>
-    <script src="pong.js"></script>
   </body>
 </html>
