--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -13,13 +13,30 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">CubeGame</div>
-      </div>
+    <button class="nightMode" onclick="nightMode()">&#x1F319;</button>
+    <h1 class="header" >Cooper's website</h1>
+    <div class="main">
+      <div class="linksTable">
+          <div>
+              <h2 style="color:white; text-align: center;">
+                  scroll test
+              </h2>
+              <a class="link" style="color: white;" href="/website/index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
+              <a class="link" style="color: white;" href="/website/page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
+              <a class="link" style="color: white;" href="/website/page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
+              <a class="link" style="color: white;" href="/website/Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
+              <a class="link" style="color: white;" href="/website/page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
+              <a class="link" style="color: white;" href="WebGL/index.html" link="color:'white;'" ><div class="pageLinkCol">UnityGame</div></a>
+           </div>
+       </div>
+       <div class="webgl-content">
+          <div id="unityContainer">
+            <div class="footer"></div>
+            <div class="webgl-logo"></div>
+            <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+            <div class="title">CubeGame</div>
+          </div>
+        </div>
     </div>
   </body>
 </html>
