--- a/index.html
+++ b/index.html
@@ -42,72 +42,46 @@
                         <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
                         <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
                         <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
-                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
-                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
-                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
-                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
-                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
-                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
-                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
-                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
-                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
-                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
-                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
-                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
-                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
-                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
-                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
-                        <a class="link" style="color: white;" href="page4.html" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="index.html" link="color:'white;'" ><div class="pageLinkCol">home</div></a>
-                        <a class="link" style="color: white;" href="page2.html" link="color:'white;'" ><div class="pageLinkCol">page2</div></a>
-                        <a class="link" style="color: white;" href="page3.html" link="color:'white;'" ><div class="pageLinkCol">youtube clone</div></a>
-                        <a class="link" style="color: white;" href="https://replit.com/@forsee456789/sans-fight-battle-sim" link="color:'white;'" ><div class="pageLinkCol">page4</div></a>
-                        <a class="link" style="color: white;" href="Cookie-Clicker-Source-Code-master/index.html" link="color:'white;'" ><div class="pageLinkCol">cookie clicker</div></a>
-                    </div>
+                        <a class="link" style="color: white;" href="WebGL/index.html" link="color:'white;'" ><div class="pageLinkCol">UnityGame</div></a>
                 </div>
-
-                <div class="randomParagraph">
-                    <div class="gibberish">
-                        <p>
-                            HTML, or Hypertext Markup Language, is a markup language used to create the structure and layout of web pages. It is considered to be relatively easy to learn and use, as it is a simple language that uses clear, human-readable tags to define the different elements of a web page. One of the main misconceptions about HTML is that it is difficult to learn and use. In reality, HTML is quite straightforward and easy to pick up, even for those with little to no coding experience. The basic structure of an HTML document is simple, and the tags used to create elements such as headings, paragraphs, and links are intuitive and easy to understand.
-                        </p>
-                        <p>
-                            Another misconception about HTML is that it is limited in its capabilities and cannot be used to create complex or interactive websites. This is also not true, as HTML can be used in conjunction with other languages such as CSS and JavaScript to create rich and engaging user experiences.
-                        </p>
-                    </div>
+            </div>
+            <div class="randomParagraph">
+                <div class="gibberish">
+                    <p>
+                        HTML, or Hypertext Markup Language, is a markup language used to create the structure and layout of web pages. It is considered to be relatively easy to learn and use, as it is a simple language that uses clear, human-readable tags to define the different elements of a web page. One of the main misconceptions about HTML is that it is difficult to learn and use. In reality, HTML is quite straightforward and easy to pick up, even for those with little to no coding experience. The basic structure of an HTML document is simple, and the tags used to create elements such as headings, paragraphs, and links are intuitive and easy to understand.
+                    </p>
+                    <p>
+                        Another misconception about HTML is that it is limited in its capabilities and cannot be used to create complex or interactive websites. This is also not true, as HTML can be used in conjunction with other languages such as CSS and JavaScript to create rich and engaging user experiences.
+                    </p>
                 </div>
+            </div>
 
-                <div class="randomParagraph2">
-                    <div class="gibberish2">
-                        <h2 style="color:white;">
-                            same thing but in shakspere
-                        </h2>
-                        <p>
-                            Fret not, fair sir/madam, for HTML is not a task most arduous.
-                            A simple language 'tis, with tags most clear,
-                            To structure and layout doth it adhere.
+            <div class="randomParagraph2">
+                <div class="gibberish2">
+                    <h2 style="color:white;">
+                        same thing but in shakspere
+                    </h2>
+                    <p>
+                        Fret not, fair sir/madam, for HTML is not a task most arduous.
+                        A simple language 'tis, with tags most clear,
+                        To structure and layout doth it adhere.
 
-                            Misconceptions there be, that HTML is hard,
-                            But this is a falsehood, as simple it is,
-                            A novice can learn it, with ease unmarred.
+                        Misconceptions there be, that HTML is hard,
+                        But this is a falsehood, as simple it is,
+                        A novice can learn it, with ease unmarred.
 
-                            Complexity doth not HTML miss,
-                            For with CSS and Javascript, it doth pair,
-                            Creating rich and engaging experiences, a bliss.
+                        Complexity doth not HTML miss,
+                        For with CSS and Javascript, it doth pair,
+                        Creating rich and engaging experiences, a bliss.
 
-                            Flaws there be, that in HTML may impair,
-                            Like using quotes not right, or tags not closed,
-                            But with care and attention, to naught they'll compare.
+                        Flaws there be, that in HTML may impair,
+                        Like using quotes not right, or tags not closed,
+                        But with care and attention, to naught they'll compare.
 
-                            In conclusion, HTML is a language most fair,
-                            Easy to learn, and versatile in its might,
-                            Creating web pages, a task most rare.
-                        </p>
-                    </div>
+                        In conclusion, HTML is a language most fair,
+                        Easy to learn, and versatile in its might,
+                        Creating web pages, a task most rare.
+                    </p>
                 </div>
             </div>
         </body>
